Updated CSS for site customization and better alignment with assignment example.

--- a/index.html
+++ b/index.html
@@ -4,34 +4,42 @@
 		<meta charset="UTF-8">	
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>
-			WDD131 - Dynamic Web Fundamentals - <em>Zach Barnett</em>
+			WDD131 - Dynamic Web Fundamentals - Zach Barnett
 		</title>
 		<meta name="description" content="Home page of Zach Barnett for the BYU-PW WDD 131 - Dynamic Web Fundamentals class">
 		<meta name="Author" content="Zach Barnett">
 		<link rel="stylesheet" href="styles/base.css">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ranchers&display=swap" rel="stylesheet">
 	</head>
 	<body>
 		<header>
 			<div class="title-bar">
-				<h1>WDD 131: Dynamic Web Fundamentals - <span style="color:yellow;"> Zach Barnett</span></h1>
+				<h1>WDD 131: Dynamic Web Fundamentals - <span> Zach Barnett</span></h1>
+				<nav class="navigation">
+					<a href="#" class="active">Home</a>
+					<a href="https://linkedin.com/in/zaquman/">Linkedin</a>
+					<a href="https://byupw.instructure.com">Canvas</a>
+					<a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/3?lang=eng&id=p7#p7">Scripture</a>
+					<!-- FIXME: Replace with a different scripture! -->
+					<a href="#">Final Project</a>
+				</nav>
 			</div>
-			<nav class="navigation">
-				<a href="https://linkedin.com">Linkedin</a>
-				<a href="https://byupw.instructure.com">Canvas</a>
-				<a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/3?lang=eng&id=p7#p7">Scripture</a>
-				<!-- FIXME: Replace with a different scripture! -->
-				<a href="#">Final Project</a>
-			</nav>
 		</header>
 		<main>
-			<div>
-				<h1>Under Construction</h1>
-			</div>
 			<section class="card">
 				<h2>About Me</h2>
+				<div>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, suscipit!
+				</div>
+
 			</section>
 			<section class="card">
 				<h2>Web Dev Resources</h2>
+				<div>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, suscipit!
+				</div>
 			</section>
 		</main>
 		<footer>
