It's about as good as it's going to get

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 			WDD131 - Dynamic Web Fundamentals - Zach Barnett
 		</title>
 		<meta name="description" content="Home page of Zach Barnett for the BYU-PW WDD 131 - Dynamic Web Fundamentals class">
-		<meta name="Author" content="Zach Barnett">
+		<meta name="Author" content="Zachary Barnett">
 		<link rel="stylesheet" href="styles/base.css">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<script src="scripts/getdates.js" defer></script>
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Ranchers&display=swap" rel="stylesheet">
 	</head>
@@ -30,15 +31,48 @@
 		<main>
 			<section class="card">
 				<h2>About Me</h2>
-				<div>
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, suscipit!
+				<div class="side-column">
+					<div>
+						<p>
+						I'm Zach, most recently from Southern California.  I was born in Kansas and have hopped around
+						the midwest to west coast.  I'm married with no children (yet), and love to travel with my wife
+						and our families.  We recently returned from a trip to Alaska, marking the 24th state I've been
+						to.
+						</p>
+					</div>
+					<img src="images/profile-picture.webp" alt="A picture of Zach in a blue shirt and black tie">
+					<div>
+						<h3> California, US</h3>
+						<hr>
+					</div>
+					<div>
+						<aside>
+							<figure>
+								<img src="images/flag-of-california.png" alt="California state flag, from Wikimedia Commons">
+								<figcaption>Flag of California</figcaption>
+							</figure>
+						</aside>
+						<p>
+							California is most populated, and third largest state in the United States of America.
+							Not only is it the most populated subnational entity in North America, it has the largest
+							subnational economy in the world.  If it were a nation of it's own, many estimations put
+							as the fourth largest economy, just behind Germany.
+						</p>
+					</div>
 				</div>
 
 			</section>
 			<section class="card">
 				<h2>Web Dev Resources</h2>
-				<div>
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, suscipit!
+				<div class="dev-resource">
+					<ul>
+						<li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS">Mozilla CSS Ref</a></li>
+						<li><a href=https://stackoverflow.com">StackOverFlow</a></li>
+						<li><a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/">CSS Flex Box Guide</a></li>
+						<li><a href="https://css-tricks.com/snippets/css/complete-guide-grid/">CSS Grid Guide</a></li>
+						<li><a href="https://htmlreference.io/">HTML References</a></li>
+						<li><a href="https://byui-cse.github.io/wdd130-ww-course/dev-standards.html">BYU-I WDD Dev Standards</a></li>
+					</ul>
 				</div>
 			</section>
 		</main>
