Typo and CSS fixes

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				<div class="dev-resource">
 					<ul>
 						<li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS">Mozilla CSS Ref</a></li>
-						<li><a href=https://stackoverflow.com">StackOverFlow</a></li>
+						<li><a href="https://stackoverflow.com">StackOverFlow</a></li>
 						<li><a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/">CSS Flex Box Guide</a></li>
 						<li><a href="https://css-tricks.com/snippets/css/complete-guide-grid/">CSS Grid Guide</a></li>
 						<li><a href="https://htmlreference.io/">HTML References</a></li>
