fixed author meta tag

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 			WDD131 - Dynamic Web Fundamentals - Zach Barnett
 		</title>
 		<meta name="description" content="Home page of Zach Barnett for the BYU-PW WDD 131 - Dynamic Web Fundamentals class">
-		<meta name="Author" content="Zachary Barnett">
+		<meta name="author" content="Zachary Barnett">
 		<link rel="stylesheet" href="styles/base.css">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<script src="scripts/getdates.js" defer></script>
@@ -82,4 +82,3 @@
 		</footer>
 	</body>
 </html>
-
