--- a/place.html
+++ b/place.html
@@ -6,12 +6,12 @@
     <title>Document</title>
     <meta name="author" content="Zach Barnett">
     <meta name="description" content="">
-    <link rel="stylesheet" href="styles/places.css">
-    <link rel="stylesheet" href="styles/places-wide.css">
+    <link rel="stylesheet" href="styles/place.css">
+    <link rel="stylesheet" href="styles/place-wide.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Farro:wght@400;700&display=swap" rel="stylesheet">
-    <script src="scripts/places.js" defer></script>
+    <script src="scripts/place.js" defer></script>
     </head>
 <body>
     <header>
