Fixed meta content

--- a/place.html
+++ b/place.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WDD131 | Place Highlight: South Korea</title>
     <meta name="author" content="Zach Barnett">
-    <meta name="description" content="">
+    <meta name="description" content="WDD131 Place assignment highlighting South Korea.">
     <link rel="stylesheet" href="styles/place.css">
     <link rel="stylesheet" href="styles/place-wide.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
