Updated page title and description

--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD131 | Temple Gallery Assignment</title>
+    <title>WDD131 | Filtered Temple Gallery Assignment</title>
     <meta name="author" content="Zach Barnett">
-    <meta name="description" content="An example webpage demonstrating changing page elements in small and large views.">
+    <meta name="description" content="An updated version of the Temple Album page showcasing the use of JS to filter lists.">
     <link rel="stylesheet" href="styles/filtered-temples.css">
     <link rel="stylesheet" href="styles/filtered-temples-large.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
