Siteplan grammar fixes and realignments

--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -22,9 +22,8 @@
         <div class="site-purpose">
             <h2>Site Purpose</h2>
             <p>Budgeting is an important skill that is often not well practiced for many reasons. I am not good at
-                setting and
-                sticking to a budget.
-                There are many reasons I fail to keep or set a budget that I feel many people share:
+                setting and sticking to a budget. There are many reasons I fail to keep or set a budget that I feel
+                many people share:
             <ul>
                 <li>Living Paycheck to Paycheck</li>
                 <ul class="no-bullet">
@@ -43,25 +42,19 @@
                 <ul class="no-bullet">
                     <li>
                         It's easy to think that you're already living frugally, or that your on top of your bills so a
-                        budget
-                        won't help you.
-                        This in part comes from the idea that a budget is just a way to save money. While that is one
-                        reason
-                        people create and follow
-                        a budget, budgets are a great tool to manage your money.
+                        budget won't help you.  This in part comes from the idea that a budget is just a way to save money.
+                        While that is one reason people create and follow a budget, budgets are a great tool to manage your money.
                     </li>
                 </ul>
             </ul>
             I wanted to put together resources about budgeting, specifically some educational material and some
-            calculators to
-            help people understand
-            how to budget and give them a place to get started.
+            calculators to help people understand how to budget and give them a place to get started.
             </p>
         </div>
 
         <div class="scenarios">
             <h2>Scenarios</h2>
-            <p>I expect that people with the following questions will find this site helpful
+            <p>I expect that people with the following questions will find this site helpful:
             <ul>
                 <li>How do I start budgeting?</li>
                 <li>How can a budget save me money?</li>
@@ -71,13 +64,15 @@
         </div>
 
         <div class="color-schema">
-            <h2>Color Schema</h2>
-            <p>My primary color is going to be this green, known as Dollar Green (and pistachio)  , #85bb65. You can see it in my headings
-                and footers</p>
+            <h2>Color Schema</h2>            
             <div class="box primary"></div>
-            <p>My secondary color is pulled from the coin in the logo I threw together with some free assets.  It's #ffb74d, also known as
-                Hunyadi Yellow or light orange</p>
+            <p>My primary color is going to be this green, known as Dollar Bill (and pistachio), #85bb65. You can see it in my headings
+                and footers.</p>
             <div class="box secondary"></div>
+            <p>My secondary color is pulled from the coin in the logo I threw together with some free assets.  It's #ffb74d, also known as
+                Hunyadi Yellow although it's classified as a light orange.  This will be used for headings, and some background color for
+                page elements.</p>
+                <!-- Text will be whatever meets AAA accessability -->
         </div>
     </main>
 
