--- a/form.html
+++ b/form.html
@@ -8,6 +8,9 @@
     <meta name="description" content="A mock-up of a product review form to demonstrate form best-practices.">
     <link rel="stylesheet" href="styles/form.css">
     <script src="scripts/form.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     </head>
 <body>
     <header>
@@ -50,7 +53,7 @@
                     <input type="text" id="username" name="username">
                 </label>
             </fieldset>
-            <button id="submit">Review My Product</button>
+            <input type="submit" value="Review My Product">
         </form>
     </main>
     <footer>
