Started outlining website HTML

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 	<body>
 		<header>
 			<div class="title-bar">
-				<h1>WDD 131: Dynamic Web Fundamentals - <span> Zach Barnett</span></h1>
+				<h1>WDD 131: Dynamic Web Fundamentals - <span>Zach Barnett</span></h1>
 				<nav class="navigation">
 					<a href="#" class="active">Home</a>
 					<a href="https://linkedin.com/in/zaquman/">Linkedin</a>
 					<a href="https://byupw.instructure.com">Canvas</a>
 					<a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/3?lang=eng&id=p7#p7">Scripture</a>
 					<!-- FIXME: Replace with a different scripture! -->
-					<a href="#">Final Project</a>
+					<a href="project/info.html">Final Project - Budgeting Tools</a>
 				</nav>
 			</div>
 		</header>
