Info page done (needs content)

--- a/project/info.html
+++ b/project/info.html
@@ -6,7 +6,7 @@
     <title>WDD131 | Budgeting Tools | Final Project</title>
     <meta name="author" content="Zach Barnett">
     <meta name="description" content="The home page of the Budgeting Tools final project">
-    <script src="scripts/info.js" defer></script>
+    <script src="scripts/budgeting.js" defer></script>
     <link rel="stylesheet" href="styles/budgeting.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,23 +16,66 @@
 </head>
 <body>
     <header>
-        <div class="nav-bar">
+        <div class="nav">
             <img src="images/budget-calculator-logo.svg" alt="A coin with a rising arrow imposed over a calculator.">
             <h1>Budgeting Tools for Beginners</h1>
-            <nav class="nav">
+            <nav class="nav-links">
                 <!-- Links back to the main page made the first week of class -->
-                <a href="../index.html">Home</a>
-                <a href="info.html" class="active">Budgeting Info</a>
+                <a href="info.html" class="active">How to Budget</a>
                 <a href="budget.html">Budget Calculator</a>
                 <a href="transactions.html">Transaction Tracker</a>
+                <a href="../index.html">About Me</a>                
             </nav>
         </div>
     </header>
     <main>
-        
+        <div class="page-title">
+            <h2>How to Budget</h2>
+        </div>
+        <div class="budgeting-info">
+            <div class="row">
+                <!-- <img src="https://placebeard.it/200" alt="PLACEHOLDER IMAGE" loading="lazy"> -->
+                 <img src="images/200.jpg" alt="PLACEHOLDER IMAGE" loading="lazy">
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi, velit tenetur quis officiis quidem temporibus, assumenda eligendi sunt sint aliquam fugiat asperiores aut, obcaecati a. Sint nihil ducimus nostrum nam pariatur ad, maxime ea, odio dolore facere sequi veritatis sit, soluta fugit iste magni fuga ullam. Officia quae sint saepe.
+                </p>
+            </div>
+            <div class="row">
+                <!-- <img src="https://placebeard.it/g/200" alt="PLACEHOLDER IMAGE" loading="lazy"> -->
+                 <img src="images/200.jpg" alt="PLACEHOLDER IMAGE" loading="lazy">
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi, velit tenetur quis officiis quidem temporibus, assumenda eligendi sunt sint aliquam fugiat asperiores aut, obcaecati a. Sint nihil ducimus nostrum nam pariatur ad, maxime ea, odio dolore facere sequi veritatis sit, soluta fugit iste magni fuga ullam. Officia quae sint saepe.
+                </p>
+            </div>
+            <div class="row">
+                <!-- <img src="https://placebeard.it/200/200" alt="PLACEHOLDER IMAGE" loading="lazy"> -->
+                 <img src="images/200.jpg" alt="PLACEHOLDER IMAGE" loading="lazy">
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi, velit tenetur quis officiis quidem temporibus, assumenda eligendi sunt sint aliquam fugiat asperiores aut, obcaecati a. Sint nihil ducimus nostrum nam pariatur ad, maxime ea, odio dolore facere sequi veritatis sit, soluta fugit iste magni fuga ullam. Officia quae sint saepe.
+                </p>
+            </div>
+        </div>
     </main>
     <footer>
-        
+        <div class="copyright">
+            <p>&copy;<span id="currentyear"></span> | Zach Barnett | California, US<br>
+		    <span id="lastmodified"></span></p>
+        </div>
+        <div class="external-links">
+            <h3>Learn more:</h3>
+            <a href="https://consumer.gov/your-money">
+                <figure>
+                    <img src="images/us-ftc-seal.svg" alt="The seal of the United States Federal Trade Commission" loading="lazy">
+                    <figcaption>Federal Trade Commission</figcaption>
+                </figure>
+            </a>
+            <a href="https://financialaid.richmond.edu/financial-wellness/budgeting.html">
+                <figure>
+                    <img src="images/university-of-richmond-shield-logo.svg" alt="The shield logo for the University of Richmond" loading="lazy">
+                    <figcaption>University of Richmond</figcaption>
+                </figure>
+            </a>
+        </div>
     </footer>
 </body>
 </html>
