Little more info beyond lorem ipsum text

--- a/project/info.html
+++ b/project/info.html
@@ -37,6 +37,7 @@
                 <!-- <img src="https://placebeard.it/200" alt="PLACEHOLDER IMAGE" loading="lazy"> -->
                  <img src="images/200.jpg" alt="PLACEHOLDER IMAGE" loading="lazy">
                 <p>
+                    This will have some information about what to budget for.
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi, velit tenetur quis officiis quidem temporibus, assumenda eligendi sunt sint aliquam fugiat asperiores aut, obcaecati a. Sint nihil ducimus nostrum nam pariatur ad, maxime ea, odio dolore facere sequi veritatis sit, soluta fugit iste magni fuga ullam. Officia quae sint saepe.
                 </p>
             </div>
@@ -44,6 +45,7 @@
                 <!-- <img src="https://placebeard.it/g/200" alt="PLACEHOLDER IMAGE" loading="lazy"> -->
                  <img src="images/200.jpg" alt="PLACEHOLDER IMAGE" loading="lazy">
                 <p>
+                    This will have some information about making a budget.
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi, velit tenetur quis officiis quidem temporibus, assumenda eligendi sunt sint aliquam fugiat asperiores aut, obcaecati a. Sint nihil ducimus nostrum nam pariatur ad, maxime ea, odio dolore facere sequi veritatis sit, soluta fugit iste magni fuga ullam. Officia quae sint saepe.
                 </p>
             </div>
@@ -51,6 +53,7 @@
                 <!-- <img src="https://placebeard.it/200/200" alt="PLACEHOLDER IMAGE" loading="lazy"> -->
                  <img src="images/200.jpg" alt="PLACEHOLDER IMAGE" loading="lazy">
                 <p>
+                    This will have information about tracking a budget.
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi, velit tenetur quis officiis quidem temporibus, assumenda eligendi sunt sint aliquam fugiat asperiores aut, obcaecati a. Sint nihil ducimus nostrum nam pariatur ad, maxime ea, odio dolore facere sequi veritatis sit, soluta fugit iste magni fuga ullam. Officia quae sint saepe.
                 </p>
             </div>
