Transaction Tracking working

--- a/project/budget.html
+++ b/project/budget.html
@@ -21,9 +21,9 @@
             <h1>Budgeting Tools for Beginners</h1>
             <nav class="nav-links">
                 <!-- Links back to the main page made the first week of class -->
-                <a href="info.html" class="active">How to Budget</a>
-                <a href="budget.html">Budget Calculator</a>
-                <a href="transactions.html">Transaction Tracker</a>
+                <a href="info.html">How to Budget</a>
+                <a href="budget.html" class="active">Budget Calculator</a>
+                <a href="transactions.html" >Transaction Tracker</a>
                 <a href="../index.html">About Me</a>                
             </nav>
         </div>
