--- a/project/info.html
+++ b/project/info.html
@@ -6,7 +6,7 @@
     <title>WDD131 | Budgeting Tools | Final Project</title>
     <meta name="author" content="Zach Barnett">
     <meta name="description" content="The home page of the Budgeting Tools final project">
-    <script src="scripts/budgeting.js" defer></script>
+    <script src="scripts/info.js" defer></script>
     <link rel="stylesheet" href="styles/budgeting.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,8 +22,8 @@
             <nav class="nav-links">
                 <!-- Links back to the main page made the first week of class -->
                 <a href="info.html" class="active">How to Budget</a>
-                <a href="budget.html">Budget Calculator</a>
                 <a href="transactions.html">Transaction Tracker</a>
+                <a href="budget.html">Budget Calculator</a>
                 <a href="../index.html">About Me</a>                
             </nav>
         </div>
@@ -34,28 +34,73 @@
         </div>
         <div class="budgeting-info">
             <div class="row">
-                <!-- <img src="https://placebeard.it/200" alt="PLACEHOLDER IMAGE" loading="lazy"> -->
-                 <img src="images/200.jpg" alt="PLACEHOLDER IMAGE" loading="lazy">
-                <p>
-                    This will have some information about what to budget for.
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi, velit tenetur quis officiis quidem temporibus, assumenda eligendi sunt sint aliquam fugiat asperiores aut, obcaecati a. Sint nihil ducimus nostrum nam pariatur ad, maxime ea, odio dolore facere sequi veritatis sit, soluta fugit iste magni fuga ullam. Officia quae sint saepe.
-                </p>
+                 <img src="images/budget-worksheet.webp" alt="A budget worksheet being filled out" loading="lazy">
+                <div>
+                    <h3>What is a Budget?</h3>
+                    <p>
+                        A budget is a tool for deciding how much money you will spend each month.  A budget shows how much 
+                        money you make and how much money you plan to spend.  Ultimately, the goal is to help you understand
+                        where your money is going.
+                    </p>
+                    <p>
+                        Creating a budget can be broken into a few steps: List your expenses, list 
+                        your income, and subtract the expenses from the income to see if you are spending too much.
+                        If the difference is less than 0, then look at your expenses for things you can change, like 
+                        reducing how much you spend on dining out.
+                    </p>
+                </div>
             </div>
             <div class="row">
-                <!-- <img src="https://placebeard.it/g/200" alt="PLACEHOLDER IMAGE" loading="lazy"> -->
-                 <img src="images/200.jpg" alt="PLACEHOLDER IMAGE" loading="lazy">
-                <p>
-                    This will have some information about making a budget.
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi, velit tenetur quis officiis quidem temporibus, assumenda eligendi sunt sint aliquam fugiat asperiores aut, obcaecati a. Sint nihil ducimus nostrum nam pariatur ad, maxime ea, odio dolore facere sequi veritatis sit, soluta fugit iste magni fuga ullam. Officia quae sint saepe.
-                </p>
+                 <img src="images/stacked-bills.webp" alt="A stack of bills" loading="lazy">
+                <div>
+                    <h3>Track Expenses</h3>
+                    <p>
+                        The first step of creating a budget is determining how you are currently spending your money.
+                        Your bills, subscriptions, grocery shopping, and the occasional sweet treat are just a few
+                        examples of some of the expenses that can easily go unnoticed but often build up over time.
+                    </p>
+                    <p>
+                        There are many ways to track your expenses.  You can use a spreadsheet and log each expense
+                        as it happens.  You can use the <a href="transactions.html">Transaction Tracker</a> page for
+                        this, or any spreadsheet application.  Another option is to gather your bank statements and
+                        work from what your bank has recorded for you.
+                    </p>
+                    <p>
+                        Regardless of which option you use, it is important to include all of your payments, no matter
+                        how big or small.  Additionally, you need to make sure you're gathering a month's worth of expenses.
+                    </p>
+                </div>
             </div>
             <div class="row">
-                <!-- <img src="https://placebeard.it/200/200" alt="PLACEHOLDER IMAGE" loading="lazy"> -->
-                 <img src="images/200.jpg" alt="PLACEHOLDER IMAGE" loading="lazy">
-                <p>
-                    This will have information about tracking a budget.
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi, velit tenetur quis officiis quidem temporibus, assumenda eligendi sunt sint aliquam fugiat asperiores aut, obcaecati a. Sint nihil ducimus nostrum nam pariatur ad, maxime ea, odio dolore facere sequi veritatis sit, soluta fugit iste magni fuga ullam. Officia quae sint saepe.
-                </p>
+                 <img src="images/stacked-paychecks.webp" alt="A collection of paychecks" loading="lazy">
+                <div>
+                    <h3>List Income</h3>
+                    <p>
+                        Once you've gathered your expenses for the month, you need to do the same for your income.
+                        This can be paychecks from a job, profits from selling items, or other forms of income.  While
+                        it's important to not skip income sources, a common strategy is to work with your minimum
+                        guaranteed income.  For example, if you work on commission, your income may change month to month.
+                        In this case, you may want to stick to an averaged income amount based on several months.  Then
+                        any extra income in one month can be saved for a month when you receive less than average.
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                 <img src="images/adjusting-budget.webp" alt="A budget worksheet being adjusted" loading="lazy">
+                <div>
+                    <h3>Subtract Expenses from Income and Adjust</h3>
+                    <p>
+                        The last step of budgeting is to compare your expenses to your income and adjust your expenses
+                        as needed.  Remember, the goal is to avoid spending more than you receive as income.  You can
+                        use the <a href="budget.html">Budget Calculator</a> to see how your income compares to your
+                        expenses.
+                    </p>
+                    <p>
+                        If you are spending more money than you are making, look at the different categories
+                        to see where you can spend less.  If you are spending less money than you are making, you could
+                        add more to your savings, especially if your income fluctuates, or add to any other category.
+                    </p>
+                </div>
             </div>
         </div>
     </main>
