--- a/project/transactions.html
+++ b/project/transactions.html
@@ -6,7 +6,7 @@
     <title>WDD131 | Budgeting Tools | Final Project</title>
     <meta name="author" content="Zach Barnett">
     <meta name="description" content="The home page of the Budgeting Tools final project">
-    <script src="scripts/budgeting.js" defer></script>
+    <script src="scripts/transactions.js" defer></script>
     <link rel="stylesheet" href="styles/budgeting.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,8 +22,8 @@
             <nav class="nav-links">
                 <!-- Links back to the main page made the first week of class -->
                 <a href="info.html">How to Budget</a>
-                <a href="budget.html">Budget Calculator</a>
                 <a href="transactions.html" class="active">Transaction Tracker</a>
+                <a href="budget.html">Budget Calculator</a>
                 <a href="../index.html">About Me</a>                
             </nav>
         </div>
